tests/NormalTests/paczka1/fuzzy1/54185607.err
Error in line 13: S473 S991 184,0
Error in line 14: S473 A677 84,6
Error in line 22: JrRqI S991 40,3
Error in line 18: g2LbQNNw15 A2 88,0
Error in line 28: g2LbQNNw15 S991 36,7
Error in line 32: g2LbQNNw15 A677 23,2
Error in line 27: S473 S991 47,3
